# raglab

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  main.py  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
src/raglab/: __init__.py  cli.py  config.py
src/raglab/gateway/: __init__.py  anthropic.py  base.py  factory.py  openai.py
src/raglab/ingestion/: __init__.py  chunkers.py  embedder.py  loaders.py
