[project]
name = "raglab"
version = "0.1.0"
description = "RAG evaluation & experimentation platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "openai>=1.58.0",
    "anthropic>=0.42.0",
    "chromadb>=0.6.0",
    "ragas>=0.2.0",
    "httpx>=0.28.0",
]

[project.scripts]
raglab = "raglab.cli:app"

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
strict = true