[project]
name = "raglab"
version = "0.1.0"
description = "RAG evaluation & experimentation platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "openai>=1.58.0",
    "anthropic>=0.42.0",
    "chromadb>=0.6.0",
    "ragas>=0.2.0",
    "httpx>=0.28.0",
    "typer>=0.12.0",
    "pypdf>=5.0.0",
    "pyyaml>=6.0.0",
    "sqlmodel>=0.0.21",
]

[project.scripts]
raglab = "raglab.cli:app"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
override-dependencies = [
    "onnxruntime==1.20.1; sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
